// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginOptions should show dark background when user has dark color scheme set 1`] = `
<ScrollView
  contentContainerStyle={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingHorizontal": 15,
      },
      null,
    ]
  }
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#171717",
      },
    ]
  }
>
  <Connect(StatusBar) />
  <Image
    source={
      Object {
        "testUri": "../../../dist/assets/images/logo_dark.png",
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontSize": 24,
          "fontWeight": "500",
          "lineHeight": 28,
          "marginBottom": 32,
          "marginTop": 32,
          "textAlign": "center",
        },
        Object {
          "color": "#dbdbdb",
        },
      ]
    }
  />
  <FormattedText
    defaultMessage="All team communication in one place, searchable and accessible anywhere"
    id="web.root.signup_info"
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontWeight": "300",
          "lineHeight": 22,
          "marginBottom": 32,
          "textAlign": "center",
        },
        Object {
          "color": "#dbdbdb",
        },
      ]
    }
  />
  <FormattedText
    defaultMessage="Log in to your account with"
    id="mobile.login_options.choose_title"
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontWeight": "300",
          "lineHeight": 22,
          "marginBottom": 32,
          "textAlign": "center",
        },
        Object {
          "color": "#dbdbdb",
        },
        Object {
          "marginBottom": 24,
        },
      ]
    }
  />
</ScrollView>
`;

exports[`LoginOptions should show light background when user has light color scheme set 1`] = `
<ScrollView
  contentContainerStyle={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "center",
        "paddingHorizontal": 15,
      },
      null,
    ]
  }
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <Connect(StatusBar) />
  <Image
    source={
      Object {
        "testUri": "../../../dist/assets/images/logo_light.png",
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontSize": 24,
          "fontWeight": "500",
          "lineHeight": 28,
          "marginBottom": 32,
          "marginTop": 32,
          "textAlign": "center",
        },
        Object {
          "color": "#171717",
        },
      ]
    }
  />
  <FormattedText
    defaultMessage="All team communication in one place, searchable and accessible anywhere"
    id="web.root.signup_info"
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontWeight": "300",
          "lineHeight": 22,
          "marginBottom": 32,
          "textAlign": "center",
        },
        Object {
          "color": "#171717",
        },
      ]
    }
  />
  <FormattedText
    defaultMessage="Log in to your account with"
    id="mobile.login_options.choose_title"
    style={
      Array [
        Object {
          "fontSize": 16,
          "fontWeight": "300",
          "lineHeight": 22,
          "marginBottom": 32,
          "textAlign": "center",
        },
        Object {
          "color": "#171717",
        },
        Object {
          "marginBottom": 24,
        },
      ]
    }
  />
</ScrollView>
`;
